# Offline_Launcher

./: .gitignore  .travis.yml  CMakeLists.txt  Offline_Launcher.pro  README.md  config.cpp  config.h  firewall.cpp  firewall.h  main.cpp  manifest.xml  offline_launcher.qrc  program.cpp  program.h  programs.cpp  programs.h  systemtray.cpp  systemtray.h  widget.cpp  widget.h  widget.ui
